<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookmark_url" />

        <EditText
            android:id="@+id/bookmark_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_bookmark_url"
            android:inputType="textUri" >
        </EditText>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookmark_title" />

        <EditText
            android:id="@+id/bookmark_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_bookmark_title"
            android:inputType="text" >
        </EditText>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookmark_description" />

        <EditText
            android:id="@+id/bookmark_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:lines="3"
            android:maxLines="4"
            android:minLines="2"
            android:scrollbars="vertical"
            android:hint="@string/enter_bookmark_description" >
        </EditText>

        <TextView
            android:id="@+id/tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookmark_tags" />

        <EditText
            android:id="@+id/bookmark_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_bookmark_tags"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp" >

            <Button
                android:id="@+id/cancel"
                style="@android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@android:string/cancel" />

            <Button
                android:id="@+id/ok"
                style="@android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@android:string/ok" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>