<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/bookmark_domain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bookmark_domain"
        android:paddingLeft="5dp" 
        style="@style/card.base_simple_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right" >

        <TextView
            android:id="@+id/bookmark_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookmark_more" 
            android:paddingRight="5dp"/>

        <TextView
            android:id="@+id/bookmark_updated_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookmark_updated_time" 
            android:paddingLeft="5dp"/>
    </LinearLayout>

</LinearLayout>