<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/base_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/base_url" />

        <EditText
            android:id="@+id/base_url_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_base_url"
            android:inputType="textUri"
            android:text="@string/http" >
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal"
            android:padding="10dp" >

            <Button
                android:id="@+id/ok"
                style="@android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@android:string/ok" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>